error.txt
(base) ➜  tpg-times-mobile git:(main) ✗ npx expo start --clear

Starting project at /Users/rohan/tpg-times-mobile
Starting Metro Bundler
warning: Bundler cache is empty, rebuilding (this may take a minute)
The following packages should be updated for best compatibility with the installed expo version:
  expo@52.0.33 - expected version: ~52.0.36
  expo-constants@17.0.5 - expected version: ~17.0.7
  expo-font@13.0.3 - expected version: ~13.0.4
  expo-location@16.5.5 - expected version: ~18.0.7
  expo-splash-screen@0.29.21 - expected version: ~0.29.22
  react-native@0.76.6 - expected version: 0.76.7
  react-native-gesture-handler@2.23.1 - expected version: ~2.20.2
  react-native-screens@4.6.0 - expected version: ~4.4.0
  react-native-svg@15.11.1 - expected version: 15.8.0
  @react-native-async-storage/async-storage@1.21.0 - expected version: 1.23.1
Your project may not work correctly until you install the expected versions of the packages.
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
█ ▄▄▄▄▄ █▄▄▄ ▀█▀█▄█ ▄▄▄▄▄ █
█ █   █ ██▄▀ █ ▀█▄█ █   █ █
█ █▄▄▄█ ██▀▄ ▄▄████ █▄▄▄█ █
█▄▄▄▄▄▄▄█ ▀▄█ ▀ █▄█▄▄▄▄▄▄▄█
█ ▄█ ▄█▄▀█▄▀█▄██ ▀▀▄█▀█▀▀▄█
█▄█▀▄  ▄▀▄▄██▄█▄ ██▄▀▀▄▀▀ █
█▀█ █▀█▄▀▀  █▀█▄▀▄ ▄ ▀█▀ ██
█ ▄▀  ▄▄▄██ █▀▄▀ █ ▄▄▀▄▀  █
█▄█▄█▄▄▄▄▀ ▀ ▄▄   ▄▄▄  ▄▀▄█
█ ▄▄▄▄▄ ██ █▀▄ ▄█ █▄█ ███▄█
█ █   █ █  ▄▄▀ ▀ ▄▄  ▄ █  █
█ █▄▄▄█ █▀▄▄ ▀ █▀█▄█▀▄█   █
█▄▄▄▄▄▄▄█▄█▄▄▄▄█▄▄▄█▄▄███▄█

› Metro waiting on exp://10.77.77.12:8081
› Scan the QR code above with Expo Go (Android) or the Camera app (iOS)

› Web is waiting on http://localhost:8081

› Using Expo Go
› Press s │ switch to development build

› Press a │ open Android
› Press i │ open iOS simulator
› Press w │ open web

› Press j │ open debugger
› Press r │ reload app
› Press m │ toggle menu
› shift+m │ more tools
› Press o │ open project code in your editor

› Press ? │ show all commands

Logs for your project will appear below. Press Ctrl+C to exit.
iOS Bundling failed 21761ms node_modules/expo-router/entry.js (2718 modules)
 ERROR  SyntaxError: /Users/rohan/tpg-times-mobile/app/(tabs)/index.tsx: Expected corresponding JSX closing tag for <Animated.View>. (321:12)

  319 |                 ))}
  320 |               </ScrollView>
> 321 |             </View>
      |             ^
  322 |           </Pressable>
  323 |         </Animated.View>
  324 |       </Modal>
